Bug 213990 - Can't resize applet part with Qt-4.6
Summary: Can't resize applet part with Qt-4.6
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View (other bugs)
Version First Reported In: 2.3-GIT
Platform: Compiled Sources Linux
: NOR grave
Target Milestone: 2.2.2
Assignee: Amarok Bugs
URL:
Keywords: release_blocker
: 217797 219086 219400 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-11-10 15:01 UTC by Rosetzky Cedric
Modified: 2009-12-20 12:07 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rosetzky Cedric 2009-11-10 15:01:36 UTC
Version:            (using Devel)
Compiler:          gcc-4.3.4 
OS:                Linux
Installed from:    Compiled sources

As wrote in the title, Amarok with Qt 4.6 doesn't let the user resize the applets part. When trying to resize it, it follows the mouse cursor, but takes back it's original size as soon as the user releases the mouse button.
Comment 1 Mikko C. 2009-11-28 10:19:46 UTC
confirmed, it's a bug in Qt but I think this report should stay open anyway, until it's fixed.
Leo do you have a link to the upstream bug?
Comment 2 Myriam Schweingruber 2009-11-28 20:02:40 UTC
Don't know if the target is realistic, some Qt bugs were fixed upstream already, though.
Comment 3 Nikolaos Chatzidakis 2009-12-02 15:27:13 UTC
Same problem here... After upgrading qt to v4.6 i have the same problem with amarok...
Comment 4 Leo Franchi 2009-12-02 16:18:38 UTC
try unlocking your layout, moving around some of the dockwidgets, and then moving them back to how it was. then lock it again.


this fixed it for me. my best guess is that it's a change in the dockwidgets binary format that is causing issues, so when you manually redo the layout it rewrites the saved file and the bug goes away.
Comment 5 Henning Fleddermann 2009-12-02 16:51:42 UTC
I'm not entirely sure if I've got the same bug but it sure sounds similar and also appears to be caused by Qt-4.6(-rc1):
I _can_ change the layout/size of the panels, so it appears to be not exactly the same as what you guys are experiencing , but as soon as I click on a menu in the titlebar or select a media source in the left panel it is reseted to how it was before.
I can also confirm the workaround suggested my Leo Franchi. While it didn't work right at the first time it did after some extensive moving around and locking/unlocking. Thanks! :)
Comment 6 Rosetzky Cedric 2009-12-02 17:04:04 UTC
You have exactly the same bug.
I'll try the workaround ASAP.
Comment 7 Bartosz Brachaczek 2009-12-02 17:05:36 UTC
(In reply to comment #5)
> I'm not entirely sure if I've got the same bug but it sure sounds similar and
> also appears to be caused by Qt-4.6(-rc1):
> I _can_ change the layout/size of the panels, so it appears to be not exactly
> the same as what you guys are experiencing , but as soon as I click on a menu
> in the titlebar or select a media source in the left panel it is reseted to how
> it was before.
> I can also confirm the workaround suggested my Leo Franchi. While it didn't
> work right at the first time it did after some extensive moving around and
> locking/unlocking. Thanks! :)

I can confirm exactly the same behavior with Qt-4.6 final.
Comment 8 Mark Kretschmann 2009-12-04 16:07:59 UTC
Should be fixed, please test with git master. Thanks.


commit ef455c94758465304463ea2e5c54d1b771c5ebfd
Author: Mark Kretschmann <kretschmann@kde.org>
Date:   Fri Dec 4 16:06:06 2009 +0100

    Fix layout resizing bug with Qt 4.6.

    Added a runtime version check, and if it's >4.5, we delete the layout
    file once, which appears to be incompatible between Qt versions.
    Please check for correctness, I can't currently test it here.

    BUG: 213990
Comment 9 Bartosz Brachaczek 2009-12-04 17:43:52 UTC
The fix works perfectly for me. Thanks.
Comment 10 Cesar Garcia 2009-12-05 01:02:52 UTC
It still dont work correctly for me, i can resize the applet part without problems but with any other action (resize the window, lock/unlock layout, close amarok and open it again) it resets the layout so any resize operation is useless. Tested with amarok-GIT, qt 4.6 and a clean config.
Comment 11 Bartosz Brachaczek 2009-12-05 01:36:44 UTC
Tried again with Amarok-GIT, Qt-4.6 and clean config. For me Amarok behaves correctly in all cases (resizing the window, locking/unlocking the layout, closing and opening the app; are you sure Cesar that you've compiled the latest git version?) except one which could hopefully be reproduced:

1. Maximize Amarok. Change the applets' sizes.
2. Unmaximize Amarok. You'll see that the applets' sizes doesn't correspond to those when maximized (this fact is nice). Change them.
3. Maximize again. You'll see that the applets' sizes were reset. Set them.
4. Unmaximize. The sizes are reset again. Don't change them this time.
5. Maximize. The applets' size are exactly the same as you've set in point 3. Amarok remembered them.

I conclude that Amarok tries to remember the applets' sizes separately for maximized and unmaximized state. The bug is that actually it can't remember them both - once one is remembered, the other is forgotten.
Comment 12 Cesar Garcia 2009-12-05 02:44:33 UTC
(In reply to comment #11)
> Tried again with Amarok-GIT, Qt-4.6 and clean config. For me Amarok behaves
> correctly in all cases (resizing the window, locking/unlocking the layout,
> closing and opening the app; are you sure Cesar that you've compiled the latest
> git version?) except one which could hopefully be reproduced:
> 
> 1. Maximize Amarok. Change the applets' sizes.
> 2. Unmaximize Amarok. You'll see that the applets' sizes doesn't correspond to
> those when maximized (this fact is nice). Change them.
> 3. Maximize again. You'll see that the applets' sizes were reset. Set them.
> 4. Unmaximize. The sizes are reset again. Don't change them this time.
> 5. Maximize. The applets' size are exactly the same as you've set in point 3.
> Amarok remembered them.
> 
> I conclude that Amarok tries to remember the applets' sizes separately for
> maximized and unmaximized state. The bug is that actually it can't remember
> them both - once one is remembered, the other is forgotten.

Thanks for the clarification. I was testing the latest GIT and 2.2.1 with the above patch backported, and because i was seeing similar results (but not the same as you explained) with both i assumed the patch wasnt fixing the issue completly, my mistake :/.

The bug that you describe is an annoying one too, but doesnt relate with this bug so this is fixed for me too. Thanks again.
Comment 13 Mikko C. 2009-12-08 09:03:45 UTC
*** Bug 217797 has been marked as a duplicate of this bug. ***
Comment 14 Myriam Schweingruber 2009-12-17 23:59:50 UTC
*** Bug 219086 has been marked as a duplicate of this bug. ***
Comment 15 Mikko C. 2009-12-20 10:21:45 UTC
*** Bug 219400 has been marked as a duplicate of this bug. ***
Comment 16 Mikko C. 2009-12-20 12:07:27 UTC
*** Bug 219400 has been marked as a duplicate of this bug. ***