Fix layout resizing bug with Qt 4.6.

Added a runtime version check, and if it's >4.5, we delete the layout
file once, which appears to be incompatible between Qt versions.
Please check for correctness, I can't currently test it here.

BUG: 213990